fix netball court height on mobile device

--- a/assets/css/netball.css
+++ b/assets/css/netball.css
@@ -5,7 +5,7 @@
 }
 
 #netball-court img {
-	height: 500px;
+	height: 250px;
 }
 
 #youtube-video {
